--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ crashlytics-build.properties
 Assets/BehaviourTree/Editor/BehaviourTreeEditor.uxml 
 
 Assets/SaveData/
+
+Assets/StreamingAssets/build_info
