fix : CraftUI Ratio and SCroll

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ Assets/BehaviourTree/Editor/BehaviourTreeEditor.uxml
 Assets/SaveData/
 
 Assets/StreamingAssets/build_info
+
+Assets/Resources/SaveData/
